fixed resource links

--- a/jest.html
+++ b/jest.html
@@ -2,11 +2,11 @@
 <html>  
 <head>  
     <title>Jest Test Suite</title>  
-    <link rel="stylesheet" type="text/css" href="src/jest.css"> 
+    <link rel="stylesheet" type="text/css" href="jest/jest.css"> 
 
-    <script src="src/jest.js"></script>    
+    <script src="jest/jest.js"></script>    
 </head>  
 <body>  
 </body> 
-<script src="src/tests.js"></script> 
+<script src="examples/tests.js"></script> 
 </html>
