corrected resource links

--- a/html/jest.html
+++ b/html/jest.html
@@ -2,10 +2,10 @@
 <html>  
 <head>  
     <title>Jest Test Suite</title>  
-    <link rel="stylesheet" type="text/css" href="jest/jest.css"> 
-    <script src="jest/jest.js"></script>    
+    <link rel="stylesheet" type="text/css" href="../jest/jest.css"> 
+    <script src="../jest/jest.js"></script>    
 </head>  
 <body>  
 </body> 
-<script src="examples/tests.js"></script> 
+<script src="../examples/tests.js"></script> 
 </html>
