move test script to the head

--- a/html/jest.html
+++ b/html/jest.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>  
-<html>  
-<head>  
-    <title>Jest Test Suite</title>  
-    <link rel="stylesheet" type="text/css" href="../jest/jest.css"> 
-    <script src="../jest/jest.js"></script>    
-</head>  
-<body>  
-</body> 
-<script src="../examples/tests.js"></script> 
+<html> 
+    <head>  
+        <meta charset="UTF-8" />
+        <title>Jest Test Suite</title>  
+        <link rel="stylesheet" type="text/css" href="../jest/jest.css"> 
+        <script src="../jest/jest.js"></script>
+     <script src="../examples/tests.js"></script>   
+    </head> 
+    
+    <body>  
+    </body>
 </html>
