--- a/html/jest.html
+++ b/html/jest.html
@@ -4,10 +4,21 @@
         <meta charset="UTF-8" />
         <title>Jest Test Suite</title>  
         <link rel="stylesheet" type="text/css" href="../jest/jest.css"> 
+        
         <script src="../jest/jest.js"></script>
-     <script src="../examples/tests.js"></script>   
+        <script src="../examples/tests.js"></script>   
     </head> 
     
-    <body>  
+    <body> 
+        <div id="summary">
+            <h1 id="jest-header">Jest Test Suite</h1>
+            <p id="user-info"></p>
+            <p id="test-stats">
+                <span id="passed-number"><span id="light"></span></span>
+                <span id="jest-time"></span>
+            </p>
+        </div> 
+        <div id="jest-tests">
+        </div>
     </body>
 </html>
